[version "0.1.6"]
date = Thu Sep 15 03:07:46 PM EDT 2022
done = Remove all external deps (is-func)

[version "0.1.5"]
date = Tue Sep 13 04:33:03 PM EDT 2022
done = Fix bug in help output when parsing bad options

[version "0.1.4"]
date = Sun Sep 11 01:27:32 PM EDT 2022
done = Change test-more to test-tap

[version "0.1.3"]
date = Thu Sep  8 01:07:59 PM EDT 2022
done = Implement and document remaining functionality

[version "0.1.2"]
date = Mon Sep  5 07:56:27 AM PDT 2022
done = Finish implementing basic functionality and tests

[version "0.1.1"]
date = Tue 30 Aug 2022 07:30:57 AM PDT
done = Preserve blank lines in options usage output

[version "0.1.0"]
date = Tue 16 Aug 2022 09:22:29 AM PDT
done = Initial release