@@ -5,7 +5,7 @@ source test/init
 +is-cmd-ver shellcheck 0.8.0 ||
   plan skip-all "Test requires shellcheck 0.8.0+ to be installed"
 
-skip=1090,1091,2002,2030,2031,2034,2154,2207,2217
+skip=1064,1072,1073,1090,1091,2002,2030,2031,2034,2154,2207,2217
 
 while read -r file; do
   if [[ $file == *.bash ]] ||
@@ -22,7 +22,7 @@ done < <(
     grep -v '\.bpan/src/' |
     grep -v 'share/template/' |
     cut -c3- |
-    LC_ALL=C sort
+    LC_ALL=C +sort
 )
 
 done-testing
